# pipemeeter

./: Cargo.toml  LICENSE  README.md  flake.nix  pipemeeter.desktop
src/: app.rs  config.rs  ipc.rs  main.rs  session.rs  ui.rs  volume.rs
src/app/: dialog_ui.rs  node_resolution.rs  routing.rs  strip_ui.rs  types.rs  volume.rs
src/pipewire_backend/: default_routing.rs  device.rs  factory.rs  meter.rs  mod.rs  node.rs  node_resolution.rs  pod.rs  port.rs  routing_graph.rs  virtual_device.rs  worker.rs
