[package]
name = "pipemeeter"
version = "0.1.0"
edition = "2024"

[dependencies]
pipewire = "0.9.2"
eframe = "0.33.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
